--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 redis.host=127.0.0.1
 redis.port=6379
 
+#wechat
 wechat.appid=appid
 wechat.appsecret=appsecret
+
+#oss
+oss.endpoint=
+oss.accessKeyId=
+oss.accessKeySecret=
+oss.bucketName=
+oss.url=
+oss.images=
