微信公众号sdk工具

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ oss.accessKeySecret=
 oss.bucketName=
 oss.url=
 oss.images=
+
+wehcat.sdk.access_token=https://api.weixin.qq.com/sns/oauth2/access_token
+wehcat.sdk.userinfo=https://api.weixin.qq.com/sns/userinfo
+wehcat.sdk.refresh_token=https://api.weixin.qq.com/sns/oauth2/refresh_token
+wehcat.sdk.check.access_token=https://api.weixin.qq.com/sns/auth?access_token
+wehcat.sdk.get.access_token=https://api.weixin.qq.com/cgi-bin/token
+wehcat.sdk.union=https://api.weixin.qq.com/cgi-bin/user/info
