--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,18 @@ redis.port=6379
 wechat.appid=appid
 wechat.appsecret=appsecret
 
+#ali
+ali.accessKeyId=
+ali.accessKeySecret=
 #oss
 oss.endpoint=
-oss.accessKeyId=
-oss.accessKeySecret=
 oss.bucketName=
 oss.url=
-oss.images=
+oss.images=images/
+oss.vocality=vocality/
+oss.video=video/
 
+#wechat
 wehcat.sdk.access_token=https://api.weixin.qq.com/sns/oauth2/access_token
 wehcat.sdk.userinfo=https://api.weixin.qq.com/sns/userinfo
 wehcat.sdk.refresh_token=https://api.weixin.qq.com/sns/oauth2/refresh_token
