微信消息模板推送

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ wehcat.sdk.refresh_token=https://api.weixin.qq.com/sns/oauth2/refresh_token
 wehcat.sdk.check.access_token=https://api.weixin.qq.com/sns/auth?access_token
 wehcat.sdk.get.access_token=https://api.weixin.qq.com/cgi-bin/token
 wehcat.sdk.union=https://api.weixin.qq.com/cgi-bin/user/info
+wehcat.sdk.custom.send=https://api.weixin.qq.com/cgi-bin/message/custom/send
+wehcat.sdk.template.send=https://api.weixin.qq.com/cgi-bin/message/template/send
